--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Page Title</title>
-</head>
+    <head>
+        <title>next-track.com</title>
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="stylesheet" href="styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    </head>
     <body>
-
-    <h1>My First Heading</h1>
-    <p>My last paragraph.</p>
-
+        <div id="content"></div>
     </body>
+    <script src="index.js" type="module"></script>
 </html>
