--- a/frontend/joinroom.html
+++ b/frontend/joinroom.html
@@ -7,7 +7,7 @@
 </head>
 <body class="joinroom">
     <div class="logo-container">
-        <img src="beatbazar-logo.png" class="logo">
+        <img src="assets/beatbazar-logo.png" class="logo">
     </div>
     <div class="login-boks">
         <h2>Deltag i rum</h2>
