--- a/frontend/room.html
+++ b/frontend/room.html
@@ -43,7 +43,7 @@
         <div class="right-inner">
             <div class="listeners"></div>
             <div class="join-wrapper">
-                <div class="primary-btn" id="invite-btn">
+                <div class="brand-btn" id="invite-btn">
                     <i class="ph-fill ph-user-plus"></i>
                     <p>Inviter lytter</p>
                 </div>
