--- a/frontend/joinroom.html
+++ b/frontend/joinroom.html
@@ -6,16 +6,40 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="joinroom">
-    <div class="logo-container">
-        <img src="assets/beatbazar-logo.png" class="logo">
-    </div>
-    <div class="login-boks">
-        <h2>Deltag i rum</h2>
-        <p>Udfyld detaljer før du deltager</p>
+    <div class="center-container">
+        <div class="logo-container">
+            <img src="assets/beatbazar-logo.png" class="logo">
+        </div>
+        <div class="login-boks">
+            <div class="form-header">
+                <h2>Deltag i rum</h2>
+                <p class="secondary">Udfyld detaljer før du deltager</p>
+            </div>
 
-        <label for="name">Dit Navn</label>
-        <input type="text" id="name" placeholder="F.eks. Marie Jensen">
+            <div class="fields">
+                <div class="input-container">
+                    <label for="name">Dit Navn</label>
+                    <input class="input-field" type="text" id="name" placeholder="F.eks. Marie Jensen">
+                </div>
 
+                <div class="avatar-container">
+                    <label>Vælg en avatar</label>
+                    <div class="avatar-choice">
+                        <img class="avatar-img" src="/assets/profile-image-man-1.png">
+                        <img class="avatar-img" src="/assets/profile-image-man-2.png">
+                        <img class="avatar-img" src="/assets/profile-image-woman-1.png">
+                        <img class="avatar-img" src="/assets/profile-image-woman-2.png">
+                    </div>
+                </div>
+            </div>
+
+            <button class="primary-btn">Fortsæt</button>
+        </div>
+        
+        <div>
+            <span class="secondary" style="text-decoration: underline;">Privatpolitik</span>
+            <span class="secondary" style="text-decoration: underline;">Vilkår og betingelser</span>
+        </div>
     </div>
 </body>
 </html>
