Lavet uiJs og igang med at loade temaer fra DB

--- a/frontend/createroom.html
+++ b/frontend/createroom.html
@@ -19,14 +19,14 @@
     <select id="theme" 
         style="display: block; margin-bottom: 40px; width: 90%; padding: 12px; border-radius: 8px; border: none; background-color: #2a2a2a; font-family: Arial, sans-serif; font-size: 14px; color: #999999; box-sizing: border-box;"
         onchange="this.style.color='#ffffff'">
-  <option value="" disabled selected>Choose Theme</option>
-  <option value="light">Christmas</option>
-  <option value="dark">Halloween</option>
-  <option value="colorful">Summer</option>
+    <option value="" disabled selected>Choose Theme</option>
+    <!-- Options will be populated here -->
+    </select>
 </select>
 
 <button>Continue</button>
 
     </div>
+    <script src="ui.js" type="module"></script>
 </body>
 </html>
