Oprettet loadThemes i uiJs

--- a/frontend/create-room.html
+++ b/frontend/create-room.html
@@ -47,9 +47,7 @@
           onchange="this.style.color='#ffffff'"
           required>
           <option value="" disabled selected>Vælg tema</option>
-          <option value="light">Christmas</option>
-          <option value="dark">Halloween</option>
-          <option value="colorful">Summer</option>
+          
         </select>
       </form>
 
@@ -65,6 +63,7 @@
     <script src="index.js">
 
     </script>
+    <script src="ui.js"></script>
 
   </body>
 </html>
