--- a/frontend/join-room.html
+++ b/frontend/join-room.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <title>BeatBazar - Deltag i party</title>
     <link rel="icon" type="image/png" href="/assets/beatbazar-favicon.png" />
 
@@ -11,7 +11,7 @@
 <body class="joinroom">
     <div class="center-container">
         <div class="logo-container">
-            <img src="assets/beatbazar-logo.png" class="logo">
+            <img src="/assets/beatbazar-logo.png" class="logo">
         </div>
         <div class="login-boks">
             <div class="form-header">
