--- a/frontend/room.html
+++ b/frontend/room.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BeatBazar - Party Room</title>
     <link rel="icon" type="image/png" href="/assets/beatbazar-favicon.png" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
