Gjort createroom pænere

--- a/frontend/create-room.html
+++ b/frontend/create-room.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" href="/assets/beatbazar-favicon.png" />
   </head>
   <body>
+    <div class="create-room-container">
     <div class="left-container">
       <div class="logo-container">
         <img src="assets/beatbazar-logo.png" class="logo" />
@@ -58,8 +59,33 @@
     </div>
 
 
-    <div class="right-container">
-       
+   <div class="right-container">
+
+      <!-- Mockup billede -->
+      <div class="player-preview">
+          <img src="assets/create-room-cont.png" alt="Player preview" />
+      </div>
+
+      <!-- Tekstsektion -->
+      <div class="promo-text">
+          <h1>Lyt til musik med dine venner</h1>
+          <p>
+              Del øjeblikket med dem du holder af. Lyt sammen, se hinandens ønsker,
+              og oplev musikken som om I var i samme rum – uanset hvor I befinder jer.
+          </p>
+
+          <!-- Badges -->
+          <div class="badges">
+              <div class="badge">
+                  <span>⭐</span> Mest installerede app i 2027
+              </div>
+              <div class="badge">
+                  <span>★ 4,8/5</span> 2M+ anmeldelser
+              </div>
+          </div>
+      </div>
+
+    </div>
     </div>
 
 
