--- a/frontend/create-room.html
+++ b/frontend/create-room.html
@@ -80,7 +80,7 @@
                   <span>⭐</span> Mest installerede app i 2027
               </div>
               <div class="badge">
-                  <span>★ 4,8/5</span> 2M+ anmeldelser
+                  <span>⭐ 4,8/5</span> 2M+ anmeldelser
               </div>
           </div>
       </div>
