createroom ændret lidt.

--- a/frontend/create-room.html
+++ b/frontend/create-room.html
@@ -56,6 +56,12 @@
         <button class="primary-btn" id="btn-create" disabled>Continue</button>
       </form>
       </div>
+      <div>
+        <span class="secondary" style="text-decoration: underline;"
+          >Privatpolitik</span>
+        <span class="secondary" style="text-decoration: underline;"
+          >Vilkår og betingelser</span>
+      </div>
     </div>
 
 
@@ -71,7 +77,7 @@
           <h1>Lyt til musik med dine venner</h1>
           <p>
               Del øjeblikket med dem du holder af. Lyt sammen, se hinandens ønsker,
-              og oplev musikken som om I var i samme rum – uanset hvor I befinder jer.
+              og oplev musikken som om I var i samme rum - uanset hvor I befinder jer.
           </p>
 
           <!-- Badges -->
@@ -87,7 +93,6 @@
 
     </div>
     </div>
-
 
 
 
