--- a/frontend/room.html
+++ b/frontend/room.html
@@ -154,12 +154,12 @@
         </div>
 
         <div class="filter-row">
-            <button class="filter-btn active">All</button>
-            <button class="filter-btn">Genres</button>
-            <button class="filter-btn">Mood</button>
-            <button class="filter-btn">Tempo</button>
-            <button class="filter-btn">Activity</button>
+            <button class="filter-btn active" data-type="all">All</button>
+            <button class="filter-btn" data-type="genres">Genres</button>
+            <button class="filter-btn" data-type="mood">Mood</button>
+            <button class="filter-btn" data-type="tempo">Tempo</button>
         </div>
+
 
         <div class="search-list">
             <div class="search-item">
@@ -185,14 +185,6 @@
                     <span>Genres</span>
                 </div>
             </div>
-
-            <div class="search-item">
-                <i class="ph-bold ph-person-simple-run"></i>
-                <div>
-                    <p>Party</p>
-                    <span>Activity</span>
-                </div>
-            </div>
         </div>
     </div>
 </div>
@@ -212,6 +204,92 @@
         }
     });
 </script>
+<script>
+const listContainer = document.querySelector(".search-list");
+const filterButtons = document.querySelectorAll(".filter-btn");
+
+// Her gemmer vi API-data
+const data = {
+    all: [],
+    tempo: [],
+    mood: [],
+    genres: []
+};
+
+// 1️⃣ Hent alle API-data (kun tempo, mood, genres)
+async function loadAllCategories() {
+    const tempoRes = await fetch("/api/tempo");
+    const tempo = await tempoRes.json();
+    
+    const moodRes = await fetch("/api/mood");
+    const mood = await moodRes.json();
+    
+    const genresRes = await fetch("/api/genre");
+    const genres = await genresRes.json();
+
+
+    // Gem i strukturen
+    data.tempo = tempo.map(x => ({ label: x.tempo_name, type: "Tempo" }));
+    data.mood = mood.map(x => ({ label: x.mood_name, type: "Mood" }));
+    data.genres = genres.map(x => ({ label: x.genre_name, type: "Genres" }));
+
+    // All = alt fra alle kategorier
+    data.all = [
+        ...data.tempo,
+        ...data.mood,
+        ...data.genres
+    ];
+
+    renderList("all");
+};
+
+// 2️⃣ Render funktion — super simpel
+function renderList(type) {
+    listContainer.innerHTML = "";
+
+    const items = data[type];
+
+    items.forEach(item => {
+        const el = document.createElement("div");
+        el.className = "search-item";
+
+        el.innerHTML = `
+            <i class="ph-bold ph-magnifying-glass"></i>
+            <div>
+                <p>${item.label}</p>
+            </div>
+        `;
+
+        el.onclick = () => {
+            userSuggestsAttribute(item.type, item.label);
+        };
+
+        listContainer.appendChild(el);
+    });
+}
+
+// 3️⃣ Filter-knap klik
+filterButtons.forEach(btn => {
+    btn.addEventListener("click", () => {
+
+        filterButtons.forEach(b => b.classList.remove("active"));
+        btn.classList.add("active");
+
+        const type = btn.dataset.type; // all, tempo, mood, genres
+        renderList(type);
+    });
+});
+
+// 4️⃣ Hent data når modal åbnes
+document.getElementById("more-options").addEventListener("click", async () => {
+    document.getElementById("search-modal").classList.remove("hidden");
+
+    if (data.all.length === 0) {
+        await loadAllCategories();
+    }
+});
+</script>
+
 
 </body>
 </html>
