--- a/frontend/room.html
+++ b/frontend/room.html
@@ -77,6 +77,7 @@
             <div class="container">
                 <div class="cover-wrapper">
                     <img class="cover" src="https://i1.sndcdn.com/artworks-000338973915-kzzyns-t500x500.jpg">
+                    
                     <div class="song-wrapper">
                         <div class="inline-container">
                             <div>
@@ -93,8 +94,13 @@
                             <div id="progress-bar"></div>
                             <div id="progress-knob"></div>
                         </div>
+                        
                     </div>
                 </div>
+                <button class="skip-button" id="skipButton">
+                        <span class="skip-text">Skip</span>
+                        <span class="skip-arrow">›</span>
+                        </button>
             </div>
         </div>
 
