Implement skip song functionality and update active user handling in the room

--- a/frontend/create-room.html
+++ b/frontend/create-room.html
@@ -53,7 +53,7 @@
          
         </select>
 
-        <button class="primary-btn" id="btn-create" disabled>Continue</button>
+        <button class="primary-btn" id="btn-create" disabled>Fortsæt</button>
       </form>
       </div>
       <div>
