--- a/frontend/room.html
+++ b/frontend/room.html
@@ -36,7 +36,7 @@
               </svg>
                 <div class="text-wrapper">
                     <h2 id="room-name">Room Name</h2>
-                    <p class="secondary">16 lyttere</p>
+                    <p id="active-user-count" class="secondary">16 lyttere</p>
                 </div>
         </div>
 
@@ -49,8 +49,8 @@
                 </div>
                 <div id="join-dropdown" class="dropdown">
                     <div class="dropdown-header">
-                        <p class="primary">Invite listeners</p>
-                        <p class="secondary">Join via en af 2 metoder</p>
+                        <p class="primary">Inviter lyttere</p>
+                        <p class="secondary">Deltag via en af 2 metoder</p>
                     </div>
 
                     <div class="dropdown-content">
@@ -76,7 +76,6 @@
         <div class="container left">
             <div class="container">
                 <div class="cover-wrapper">
-                    <img class="cover" src="https://i1.sndcdn.com/artworks-000338973915-kzzyns-t500x500.jpg">
                     
                     <img id="song-cover" class="cover" src="https://i1.sndcdn.com/artworks-000338973915-kzzyns-t500x500.jpg">
                     <div class="song-wrapper">
