Refactor song display elements in room view and add console logging for debugging

--- a/frontend/room.html
+++ b/frontend/room.html
@@ -81,8 +81,8 @@
                     <div class="song-wrapper">
                         <div class="inline-container">
                             <div>
-                                <h3>Paint it, Black</h3>
-                                <p>The Rolling Stones</p>
+                                <h3 id="song-title">Paint it, Black</h3>
+                                <p id="song-artist">The Rolling Stones</p>
                             </div>
 
                             <div>
