--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,113 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>next-track.com</title>
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
-        <link rel="stylesheet" href="styles.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    </head>
-    <body>
-        <div id="content"></div>
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/styles.css" />
+    <link rel="icon" type="image/png" href="/assets/beatbazar-favicon.png" />
+  </head>
+  <body>
+    <div class="create-room-container">
+    <div class="left-container">
+      <div class="logo-container">
+        <img src="assets/beatbazar-logo.png" class="logo" />
+      </div>
+      <div class="login-boks">
+        <h2>Opret rum</h2>
+        <p>Udfyld detaljer før du deltager</p>
+
+        <form id="roomForm" onchange="
+        const room = document.getElementById('room-name').value.trim();
+        const theme = document.getElementById('theme-select').value.trim();
+        document.getElementById('btn-create').disabled = !(room && theme);
+      ">
+        <label for="name">Room name</label>
+        <input
+          class="input-field"
+          type="text"
+          id="room-name"
+          placeholder="Your room name"
+          required
+          />
+
+
+        <select
+          id="theme-select"
+          style="
+            display: block;
+            margin-bottom: 40px;
+            width: 100%;
+            padding: 12px;
+            border-radius: 8px;
+            border: none;
+            background-color: #2a2a2a;
+            font-family: Arial, sans-serif;
+            font-size: 16px;
+            line-height: 22px;
+            color: #999999;
+            box-sizing: border-box;
+          "
+          onchange="this.style.color='#ffffff'"
+          required>
+          <option value="" disabled selected>Vælg tema</option>
+         
+        </select>
+
+        <button class="primary-btn" id="btn-create" disabled>Fortsæt</button>
+      </form>
+      </div>
+      <div>
+        <span class="secondary" style="text-decoration: underline;"
+          >Privatpolitik</span>
+        <span class="secondary" style="text-decoration: underline;"
+          >Vilkår og betingelser</span>
+      </div>
+    </div>
+
+
+   <div class="right-container">
+
+      <!-- Mockup billede -->
+      <div class="player-preview">
+          <img src="assets/create-room-cont.png" alt="Player preview" />
+      </div>
+
+      <!-- Tekstsektion -->
+      <div class="promo-text">
+          <h1>Lyt til musik med dine venner</h1>
+          <p>
+              Del øjeblikket med dem du holder af. Lyt sammen, se hinandens ønsker,
+              og oplev musikken som om I var i samme rum - uanset hvor I befinder jer.
+          </p>
+
+          <!-- Badges -->
+          <div class="badges">
+              <div class="badge">
+                  <span>⭐</span> Mest installerede app i 2027
+              </div>
+              <div class="badge">
+                  <span>⭐ 4,8/5</span> 2M+ anmeldelser
+              </div>
+          </div>
+      </div>
+
+    </div>
+    </div>
+
+
+
+    <script src="index.js"></script>
+
+    <script src="ui.js"></script>
+    <script>
+      document.getElementById("roomForm").addEventListener("submit", function (e) {
+      e.preventDefault();
+      const name = document.getElementById("room-name").value;
+      const theme = document.getElementById("theme-select").value;
+      createRoom(name, theme);
+      console.log(name + theme);
+    });
+  </script>
+
+  </body>
 </html>
