--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,12 +21,12 @@
         const theme = document.getElementById('theme-select').value.trim();
         document.getElementById('btn-create').disabled = !(room && theme);
       ">
-        <label for="name">Room name</label>
+        <label for="name">Vælg rum navn</label>
         <input
           class="input-field"
           type="text"
           id="room-name"
-          placeholder="Your room name"
+          placeholder="F.eks Marias party"
           required
           />
 
