--- a/frontend/room.html
+++ b/frontend/room.html
@@ -98,11 +98,14 @@
                     </div>
                 </div>
                 <div class="skip-container">
-                        <button class="skip-button" id="skipButton">
-                        <span class="skip-text">Skip</span>
-                        <span class="skip-arrow">›</span>
-                        </button>
-                        <p id="skip-vote">0/0 votes</p>
+                <button class="skip-button" id="skipButton">
+                    <span class="skip-text">Skip</span>
+                    <span class="skip-arrow">›</span>
+                </button>
+                <div class="skip-votes-container">
+                    <span id="skip-count">0/0</span>
+                    <span class="votes-label">votes</span>
+                    </div>
                 </div>
                 
             </div>
