--- a/frontend/room.html
+++ b/frontend/room.html
@@ -106,7 +106,16 @@
                     <span id="skip-count">0/0</span>
                     <span class="votes-label">votes</span>
                     </div>
+                    <br>
+                    
+                    <div class="btn-wrapper">
+                    <div id="more-options" class="secondary-btn">
+                        <p>Bestem musikkens retning</p>
+                        <i class="ph-fill ph-dots-three-outline"></i>
+                    </div>
+                    </div>
                 </div>
+
                 
             </div>
         </div>
@@ -121,16 +130,7 @@
 
         </div>
     </div>
-    <br>    
-    <div class="footer">
-        <div class="btn-wrapper">
-            <div id="more-options" class="secondary-btn">
-                <p>Tryk for at ønske sange</p>
-                <i class="ph-fill ph-dots-three-outline"></i>
-            </div>
-        </div>
-    </div>
-
+   
 
     <script src="/index.js"></script>
     <script src="/qr.min.js"></script>
