--- a/frontend/room.html
+++ b/frontend/room.html
@@ -114,26 +114,11 @@
         <div class="container right">
             <div class="queue">
                 <h3>Kø</h3>
-                <div class="queue-item">
-                    <div class="item-info">
-                        <img class="queue-cover" src="">
-                        <div class="text-wrapper">
-                            <p class="queue-title">Title<p>
-                            <p class="queue-artist">Artist</p>
-                    </div>
-                    <div class="play-status">
-                        <i class="ph-fill ph-play"></i>
-                        <p>Now playing</p>
-                    </div>
-                </div>
-            </div>
-            <div class="events">
-                <h3>Events</h3>
-            </div>
-
+                <div id="queue-list"></div>
         </div>
     </div>
     <br>    
+    </div>
     <div class="footer">
         <div class="btn-wrapper">
             <div id="more-options" class="secondary-btn">
