ny title til knap

--- a/frontend/room.html
+++ b/frontend/room.html
@@ -173,7 +173,7 @@
     <div class="footer">
         <div class="btn-wrapper">
             <div id="more-options" class="secondary-btn">
-                <p>Tryk for at ønske sange</p>
+                <p>Vælg musikkens retning</p>
                 <i class="ph-fill ph-dots-three-outline"></i>
             </div>
         </div>
