--- a/frontend/room.html
+++ b/frontend/room.html
@@ -167,6 +167,11 @@
                 <h3>Kø</h3>
                 <div id="queue-list"></div>
         </div>
+        <div class="events-container">
+        <h3>Events</h3>
+        <div id="event-list"></div>
+        </div>
+
     </div>
     <br>    
     </div>
