Add select-attribute endpoint and update user interface for active users

--- a/frontend/room.html
+++ b/frontend/room.html
@@ -31,7 +31,7 @@
 
     <div class="header">
         <div class="left-inner">
-            <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60" fill="none">
+            <svg xmlns="http://www.w3.org/2000/svg" width="52" height="52" viewBox="0 0 60 60" fill="none">
                 <path d="M30 0C13.4818 0 0 13.4818 0 30C0 46.5182 13.4818 60 30 60C46.5182 60 60 46.5182 60 30C60 13.4818 46.5182 0 30 0ZM8.38057 30C8.38057 23.8057 11.0526 18.0972 15.3036 14.2105C17.004 12.6316 19.919 13.1174 21.1336 15.1822L28.664 28.1782C29.3927 29.3927 29.3927 30.8502 28.664 32.0648L21.1336 45.0607C19.919 47.247 17.004 47.6113 15.1822 45.9109C11.0526 41.7814 8.38057 36.1943 8.38057 30ZM38.8664 44.8178L31.336 31.8219C30.6073 30.6073 30.6073 29.1498 31.336 27.9352L38.8664 14.9393C40.081 12.8745 42.8745 12.3887 44.6964 13.9676C48.9474 17.8543 51.6194 23.5628 51.6194 29.7571C51.6194 35.9514 48.9474 41.6599 44.6964 45.5466C42.8745 47.4899 40.081 47.004 38.8664 44.8178Z" fill="#2E6CF5"/>
               </svg>
                 <div class="text-wrapper">
@@ -41,7 +41,7 @@
         </div>
 
         <div class="right-inner">
-            <div class="listeners"></div>
+            <div id="user-list"></div>
             <div class="join-wrapper">
                 <div class="brand-btn" id="invite-btn">
                     <i class="ph-fill ph-user-plus"></i>
