--- a/frontend/room.html
+++ b/frontend/room.html
@@ -110,7 +110,7 @@
                                 <p id="song-artist">The Rolling Stones</p>
                             </div>
 
-                            <div>
+                            <div id="like-dislike">
             <a style="all: unset; cursor: pointer;">
                 <i class="ph-bold ph-thumbs-down" onclick="toggleFill(this)"></i>
             </a>
@@ -305,9 +305,9 @@ async function loadAllCategories() {
     const tempo = await tempoRes.json();
 
     // Gem i strukturen
-    data.genres = genres.map(x => ({ label: x.genre_name, type: "Genres", id: x.genre_id }));
-    data.mood = mood.map(x => ({ label: x.mood_name, type: "Mood", id: x.mood_id}));
-    data.tempo = tempo.map(x => ({ label: x.tempo_name, type: "Tempo", id: x.tempo_id }));
+    data.genres = genres.map(x => ({ label: x.genre_name, type: "genres", id: x.genre_id }));
+    data.mood = mood.map(x => ({ label: x.mood_name, type: "mood", id: x.mood_id}));
+    data.tempo = tempo.map(x => ({ label: x.tempo_name, type: "tempo", id: x.tempo_id }));
 
     // All = alt fra alle kategorier
     data.all = [
