--- a/frontend/room.html
+++ b/frontend/room.html
@@ -305,7 +305,7 @@ async function loadAllCategories() {
     const tempo = await tempoRes.json();
 
     // Gem i strukturen
-    data.genres = genres.map(x => ({ label: x.genre_name, type: "Genres", id: x.genre_id }));
+    data.genres = genres.map(x => ({ label: x.genre_name, type: "Genre", id: x.genre_id }));
     data.mood = mood.map(x => ({ label: x.mood_name, type: "Mood", id: x.mood_id}));
     data.tempo = tempo.map(x => ({ label: x.tempo_name, type: "Tempo", id: x.tempo_id }));
 
@@ -348,7 +348,8 @@ function renderList(type) {
         };
        
         el.onclick = () => {
-            addAttribute(roomId, attribute)
+            console.log(roomId, attribute);
+            addAttribute(roomId, attribute);
         };
 
         listContainer.appendChild(el);
