Add song like and dislike functionality; update event logging in the room

--- a/frontend/room.html
+++ b/frontend/room.html
@@ -112,11 +112,11 @@
 
                             <div id="like-dislike">
             <a style="all: unset; cursor: pointer;">
-                <i class="ph-bold ph-thumbs-down" onclick="toggleFill(this)"></i>
+                <i class="ph-bold ph-thumbs-down" onclick="toggleFill(this); sendLike()"></i>
             </a>
 
             <a style="all: unset; cursor: pointer;">
-                <i class="ph-bold ph-thumbs-up" onclick="toggleFill(this)"></i>
+                <i class="ph-bold ph-thumbs-up" onclick="toggleFill(this); sendDislike()"></i>
             </a>
 
             <script>
