Fix like and dislike functionality by swapping event handlers in room.html

--- a/frontend/room.html
+++ b/frontend/room.html
@@ -117,11 +117,11 @@
 
                             <div id="like-dislike">
             <a style="all: unset; cursor: pointer;">
-                <i class="ph-bold ph-thumbs-down" onclick="toggleFill(this); sendLike()"></i>
+                <i class="ph-bold ph-thumbs-down" onclick="toggleFill(this); sendDislike()"></i>
             </a>
 
             <a style="all: unset; cursor: pointer;">
-                <i class="ph-bold ph-thumbs-up" onclick="toggleFill(this); sendDislike()"></i>
+                <i class="ph-bold ph-thumbs-up" onclick="toggleFill(this); sendLike()"></i>
             </a>
 
             <script>
